# esp32_led_controller

./: .gitignore  CMakeLists.txt  Makefile  README.md  cert.pem  flash_spiffs.sh  idf_env.sh  key.pem  partitions.csv  reconfigure.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old  server_cert.pem  server_key.pem
components/ws2812_rmt/: CMakeLists.txt  Kconfig  ws2812_animations.c  ws2812_control.c
components/ws2812_rmt/include/: ws2812_animations.h  ws2812_config.h  ws2812_control.h
data/: index.html
main/: CMakeLists.txt  index-old.html  main.c
main/certs/: server_cert.der  server_cert.pem  server_key.der  server_key.pem
